corrected icons on footer not showing

--- a/assets/css/styling.css
+++ b/assets/css/styling.css
@@ -264,7 +264,7 @@ hr {
 	padding:18px 42px;
 }
 
-.contact form input {
+.contact-section form input {
 	padding:15px;
 	margin-right: 30px;
 	font-size: 18px;
